--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,13 @@
 
 .FormMovie .form-data {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   margin: 5px 0;
 }
 
 .FormMovie .form-data label {
   display: inline-block;
   width: 75px;
-  margin-right: 10px;
   text-align: right;
 }
 
